--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:sharedUserId="android.uid.system">
+    android:sharedUserId="android.uid.system"
+    package="com.swordhealth.bugreport">
 
     <!---android:dataExtractionRules="@xml/data_extraction_rules"-->
     <uses-permission
